2007-06-12  Kohei Yoshida  <kyoshida@novell.com>

    * workben/addon_pkg/*: re-added to make it possible to (once again) build
    the Solver component as a standalone UNO package.  Still work in progress.

2007-06-11  Kohei Yoshida  <kyoshida@novell.com>

    * source/inc/numeric/matrix.hxx:
    * source/numeric/matrix.cxx: minor variable name changes.

    * source/numeric/matrix_test.cxx: removed garbage from license header.

    * source/inc/numeric/polyeqnsolver.hxx:
    * source/numeric/polyeqnsolver.cxx:
    * source/numeric/polyeqnsolver_test.cxx:
    * source/numeric/makefile.mk: new class PolyEqnSolver added for solving
      arbitrary-order polynomial equations.

    * workben/unittest/Makefile: unit test for PolyEqnSolver.

2007-05-04  Kohei Yoshida  <kyoshida@novell.com>

    * source/service/service.cxx: commented out unused variables to remove 
      warnings.  

2007-05-04  Kohei Yoshida  <kyoshida@novell.com>

    * source/numeric/nlpmodel.cxx: added #include <stdio.h> header to fix 
      build breakage.  

2007-04-30  Kohei Yoshida  <kyoshida@novell.com>

    * workben/testcase/sudoku.ods:
    * workben/testcase/tc1.ods:
    * workben/testcase/tc2.ods:
    * workben/testcase/tc3.ods:
    * workben/testcase/tc4_timealloc.ods: added.

    * workben/unittest:
    * workben/unittest/Makefile:
    * source/numeric/matrix_test.cxx: added for unit-testing.

    * source/numeric/cellfuncobj.cxx:
    * source/inc/numeric/cellfuncobj.hxx:
    * source/inc/numeric/funcobj.hxx: changed signature of getFuncString().

    * source/inc/numeric/matrix.hxx:
    * source/numeric/matrix.cxx: cleaned up the Matrix class to remove its
    implementation class & file-wide tab->space conversion.

    * source/numeric/nlpmodel.cxx: removed unused header file #include.

2007-04-08  Kohei Yoshida  <kyoshida@novell.com>

    * source/inc/numeric/cellfuncobj.hxx:
    * source/inc/numeric/funcobj.hxx:
    * source/inc/numeric/nlpbase.hxx: