@@ -1,3 +1,13 @@
+2007-06-13  Kohei Yoshida  <kyoshida@novell.com>
+
+    * source/inc/tool/global.hxx:
+    * source/numeric/lpmodel.cxx:
+    * source/service/service.cxx: added preprocessing to deal with standalone
+    scsolver uno component build.
+
+    * workben/addon_pkg/Makefile: fixed it to build a standalone component 
+    file once again.
+
 2007-06-12  Kohei Yoshida  <kyoshida@novell.com>
 
     * workben/addon_pkg/*: re-added to make it possible to (once again) build
